fix output notebook for automate

--- a/preprocessing/Experiment-Lucky.ipynb
+++ b/preprocessing/Experiment-Lucky.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "id": "BlmvjLY9M4Yj"
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "id": "GHCGNTyrM5fS"
       },
@@ -219,24 +219,29 @@
               "</div>"
             ],
             "text/plain": [
-              "   age  sex  cp  trestbps  chol  fbs  ...  exang  oldpeak  slope  ca  thal  target\n",
-              "0   52    1   0       125   212    0  ...      0      1.0      2   2     3       0\n",
-              "1   53    1   0       140   203    1  ...      1      3.1      0   0     3       0\n",
-              "2   70    1   0       145   174    0  ...      1      2.6      0   0     3       0\n",
-              "3   61    1   0       148   203    0  ...      0      0.0      2   1     3       0\n",
-              "4   62    0   0       138   294    1  ...      0      1.9      1   3     2       0\n",
+              "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+              "0   52    1   0       125   212    0        1      168      0      1.0      2   \n",
+              "1   53    1   0       140   203    1        0      155      1      3.1      0   \n",
+              "2   70    1   0       145   174    0        1      125      1      2.6      0   \n",
+              "3   61    1   0       148   203    0        1      161      0      0.0      2   \n",
+              "4   62    0   0       138   294    1        1      106      0      1.9      1   \n",
               "\n",
-              "[5 rows x 14 columns]"
+              "   ca  thal  target  \n",
+              "0   2     3       0  \n",
+              "1   0     3       0  \n",
+              "2   0     3       0  \n",
+              "3   1     3       0  \n",
+              "4   3     2       0  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "#Type your code here\n",
-        "df = pd.read_csv(\"./data_raw/heart_disease.csv\")\n",
+        "df = pd.read_csv(\"../heart_disease.csv\")\n",
         "print(f\"Jumlah baris dan kolom : {df.shape}\")\n",
         "\n",
         "df.head()"
@@ -257,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "dKeejtvxM6X1"
       },
@@ -486,17 +491,35 @@
               "</div>"
             ],
             "text/plain": [
-              "               age          sex  ...         thal       target\n",
-              "count  1025.000000  1025.000000  ...  1025.000000  1025.000000\n",
-              "mean     54.434146     0.695610  ...     2.323902     0.513171\n",
-              "std       9.072290     0.460373  ...     0.620660     0.500070\n",
-              "min      29.000000     0.000000  ...     0.000000     0.000000\n",
-              "25%      48.000000     0.000000  ...     2.000000     0.000000\n",
-              "50%      56.000000     1.000000  ...     2.000000     1.000000\n",
-              "75%      61.000000     1.000000  ...     3.000000     1.000000\n",
-              "max      77.000000     1.000000  ...     3.000000     1.000000\n",
+              "               age          sex           cp     trestbps        chol  \\\n",
+              "count  1025.000000  1025.000000  1025.000000  1025.000000  1025.00000   \n",
+              "mean     54.434146     0.695610     0.942439   131.611707   246.00000   \n",
+              "std       9.072290     0.460373     1.029641    17.516718    51.59251   \n",
+              "min      29.000000     0.000000     0.000000    94.000000   126.00000   \n",
+              "25%      48.000000     0.000000     0.000000   120.000000   211.00000   \n",
+              "50%      56.000000     1.000000     1.000000   130.000000   240.00000   \n",
+              "75%      61.000000     1.000000     2.000000   140.000000   275.00000   \n",
+              "max      77.000000     1.000000     3.000000   200.000000   564.00000   \n",
               "\n",
-              "[8 rows x 14 columns]"
+              "               fbs      restecg      thalach        exang      oldpeak  \\\n",
+              "count  1025.000000  1025.000000  1025.000000  1025.000000  1025.000000   \n",
+              "mean      0.149268     0.529756   149.114146     0.336585     1.071512   \n",
+              "std       0.356527     0.527878    23.005724     0.472772     1.175053   \n",
+              "min       0.000000     0.000000    71.000000     0.000000     0.000000   \n",
+              "25%       0.000000     0.000000   132.000000     0.000000     0.000000   \n",
+              "50%       0.000000     1.000000   152.000000     0.000000     0.800000   \n",
+              "75%       0.000000     1.000000   166.000000     1.000000     1.800000   \n",
+              "max       1.000000     2.000000   202.000000     1.000000     6.200000   \n",
+              "\n",
+              "             slope           ca         thal       target  \n",
+              "count  1025.000000  1025.000000  1025.000000  1025.000000  \n",
+              "mean      1.385366     0.754146     2.323902     0.513171  \n",
+              "std       0.617755     1.030798     0.620660     0.500070  \n",
+              "min       0.000000     0.000000     0.000000     0.000000  \n",
+              "25%       1.000000     0.000000     2.000000     0.000000  \n",
+              "50%       1.000000     0.000000     2.000000     1.000000  \n",
+              "75%       2.000000     1.000000     3.000000     1.000000  \n",
+              "max       2.000000     4.000000     3.000000     1.000000  "
             ]
           },
           "metadata": {},
@@ -552,14 +575,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:10: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:10: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -580,27 +603,27 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:19: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:19: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.boxplot(data=df, x=target_col, y=col, ax=axes[i, 1], palette='husl')\n",
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:19: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:19: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.boxplot(data=df, x=target_col, y=col, ax=axes[i, 1], palette='husl')\n",
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:19: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:19: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.boxplot(data=df, x=target_col, y=col, ax=axes[i, 1], palette='husl')\n",
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:19: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:19: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
             "  sns.boxplot(data=df, x=target_col, y=col, ax=axes[i, 1], palette='husl')\n",
-            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_18944\\4289273214.py:19: FutureWarning: \n",
+            "C:\\Users\\Lucky\\AppData\\Local\\Temp\\ipykernel_17580\\4289273214.py:19: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -701,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 14,
       "metadata": {
         "id": "Og8pGV0-iDLz"
       },
@@ -710,6 +733,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Dataset hasil preprocessing berhasil disimpan ke: heart_disease_preprocessing/heart_disease_clean.csv\n",
             "After Preprocessing\n"
           ]
         },
@@ -744,9 +768,7 @@
               "      <th>cp_1</th>\n",
               "      <th>cp_2</th>\n",
               "      <th>cp_3</th>\n",
-              "      <th>fbs_1</th>\n",
-              "      <th>restecg_1</th>\n",
-              "      <th>restecg_2</th>\n",
+              "      <th>...</th>\n",
               "      <th>exang_1</th>\n",
               "      <th>slope_1</th>\n",
               "      <th>slope_2</th>\n",
@@ -772,9 +794,7 @@
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
+              "      <td>...</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>True</td>\n",
@@ -798,9 +818,7 @@
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
+              "      <td>...</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -824,9 +842,7 @@
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
+              "      <td>...</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
@@ -850,9 +866,7 @@
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
+              "      <td>...</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>True</td>\n",
@@ -876,9 +890,7 @@
               "      <td>False</td>\n",
               "      <td>False</td>\n",
               "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
+              "      <td>...</td>\n",
               "      <td>False</td>\n",
               "      <td>True</td>\n",
               "      <td>False</td>\n",
@@ -892,15 +904,30 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>5 rows × 23 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "        age  trestbps      chol   thalach  ...   ca_4  thal_1  thal_2  thal_3\n",
-              "0 -0.264729 -0.380366 -0.679329  0.821776  ...  False   False   False    True\n",
-              "1 -0.154299  0.476254 -0.864228  0.257065  ...  False   False   False    True\n",
-              "2  1.723006  0.761795 -1.460013 -1.046113  ...  False   False   False    True\n",
-              "3  0.729139  0.933119 -0.864228  0.517701  ...  False   False   False    True\n",
-              "4  0.839569  0.362038  1.005304 -1.871459  ...  False   False    True   False\n",
+              "        age  trestbps      chol   thalach   oldpeak  target  sex_1   cp_1  \\\n",
+              "0 -0.264729 -0.380366 -0.679329  0.821776 -0.059498       0   True  False   \n",
+              "1 -0.154299  0.476254 -0.864228  0.257065  1.726440       0   True  False   \n",
+              "2  1.723006  0.761795 -1.460013 -1.046113  1.301217       0   True  False   \n",
+              "3  0.729139  0.933119 -0.864228  0.517701 -0.909945       0   True  False   \n",
+              "4  0.839569  0.362038  1.005304 -1.871459  0.705904       0  False  False   \n",
+              "\n",
+              "    cp_2   cp_3  ...  exang_1  slope_1  slope_2   ca_1   ca_2   ca_3   ca_4  \\\n",
+              "0  False  False  ...    False    False     True  False   True  False  False   \n",
+              "1  False  False  ...     True    False    False  False  False  False  False   \n",
+              "2  False  False  ...     True    False    False  False  False  False  False   \n",
+              "3  False  False  ...    False    False     True   True  False  False  False   \n",
+              "4  False  False  ...    False     True    False  False  False   True  False   \n",
+              "\n",
+              "   thal_1  thal_2  thal_3  \n",
+              "0   False   False    True  \n",
+              "1   False   False    True  \n",
+              "2   False   False    True  \n",
+              "3   False   False    True  \n",
+              "4   False    True   False  \n",
               "\n",
               "[5 rows x 23 columns]"
             ]
@@ -910,6 +937,8 @@
         }
       ],
       "source": [
+        "import os\n",
+        "\n",
         "def preprocess_heart_data(df):\n",
         "    df = df[df['chol'] <= 500].copy()\n",
         "\n",
@@ -920,19 +949,20 @@
         "    scaler = StandardScaler()\n",
         "    df_encoded[num_features] = scaler.fit_transform(df_encoded[num_features])\n",
         "\n",
+        "    output_path = \"heart_disease_preprocessing/heart_disease_clean.csv\"\n",
+        "\n",
+        "    os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+        "\n",
+        "    df_encoded.to_csv(output_path, index=False)\n",
+        "\n",
+        "    print(\"Dataset hasil preprocessing berhasil disimpan ke:\", output_path)\n",
+        "\n",
         "    return df_encoded\n",
         "\n",
         "df_clean = preprocess_heart_data(df)\n",
         "print(\"After Preprocessing\")\n",
         "display(df_clean.head())"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
